--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
+    "start:prod": "cross-env NODE_ENV=production node ./bin/www",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/www",
     "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -16,6 +18,7 @@
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "rotating-file-stream": "^3.1.0",
     "supertest": "^6.3.3"
   },
