--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "redis": "3.1.2",
     "rotating-file-stream": "^3.1.0",
     "supertest": "^6.3.3"
   },
