--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start:prod": "cross-env NODE_ENV=production node ./bin/www",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/www",
-    "test": "jest"
+    "start": "ts-node ./src/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon ./src/index.ts",
+    "test": "jest",
+    "build": "webpack",
+    "dist:s": "webpack && node ./dist/app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -24,6 +25,14 @@
     "supertest": "^6.3.3"
   },
   "devDependencies": {
-    "jest": "^29.4.3"
+    "@types/express": "^4.17.17",
+    "copy-webpack-plugin": "^11.0.0",
+    "jest": "^29.4.3",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
