--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
     "sourceMap": true, // 生成 source map
     "strict": true, // 开启所有严格类型检查选项
     "moduleResolution": "node", // 模块解析策略
-    "resolveJsonModule": true // 支持导入 JSON 模块
+    "resolveJsonModule": true, // 支持导入 JSON 模块
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "./src/**/*.ts"
