--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=development nodemon ./src/index.ts",
     "test": "jest",
     "build": "webpack",
+    "build:ts": "tsc",
     "dist:s": "webpack && node ./dist/app.js"
   },
   "dependencies": {
