--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "ts-node ./src/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon ./src/index.ts",
     "test": "jest",
-    "build": "webpack",
+    "build:w": "webpack",
     "build:ts": "tsc",
-    "dist:s": "webpack && node ./dist/app.js"
+    "dist-w": "webpack && node ./dist/app.js",
+    "dist-ts": "tsc && node ./dist/index.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,12 +22,16 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "redis": "3.1.2",
+    "redis": "^4.6.4",
     "rotating-file-stream": "^3.1.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
+    "@types/redis": "^4.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.4.3",
     "ts-loader": "^9.4.2",
