--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6", // 编译后的 JavaScript 代码版本
+    // "module": "ESNext",
     "module": "commonjs", // 编译后的模块规范
     "outDir": "./dist", // 编译后的 JavaScript 代码输出目录
     "esModuleInterop": true, // 支持 CommonJS 模块的导入和导出语法
@@ -8,6 +9,7 @@
     "strict": true, // 开启所有严格类型检查选项
     "moduleResolution": "node", // 模块解析策略
     "resolveJsonModule": true, // 支持导入 JSON 模块
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": [
         "./src/*"
