--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "ioredis": "^5.3.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.4",
     "rotating-file-stream": "^3.1.0",
     "supertest": "^6.3.3"
   },
