--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dist-ts": "tsc && node ./dist/index.js"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
@@ -24,7 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "rotating-file-stream": "^3.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
