--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.1.2",
     "rotating-file-stream": "^3.1.0",
+    "sequelize": "^6.29.0",
     "supertest": "^6.3.3",
     "tslib": "^2.5.0"
   },
