--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "debug": "~2.6.9",
