--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.0.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-jwt": "^8.4.1",
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
