--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs", // 编译后的模块规范
     "outDir": "./dist", // 编译后的 JavaScript 代码输出目录
     "esModuleInterop": true, // 表示启用 ES6 模块导入和导出
-    "sourceMap": true, // 生成 source map
+    "sourceMap": false, // 生成 source map
     // "strict": false, // 开启所有严格类型检查选项
     "moduleResolution": "node", // 模块解析策略
     "resolveJsonModule": true, // 支持导入 JSON 模块
@@ -26,10 +26,11 @@
     }
   },
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./src/public/**/*",
   ], // 指定需要编译的 TypeScript 文件
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
-  ] // 排除不需要编译的文件或目录
+  ], // 排除不需要编译的文件或目录
 }
