--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
