--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rotating-file-stream": "^3.1.0",
     "sequelize": "^6.29.0",
     "supertest": "^6.3.3",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
