--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "semi": false,
   "singleQuote": true,
-  "functionParentheses": "avoid"
+  "functionParentheses": "avoid",
+  "arrowParens": "avoid"
 }
