--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/mime-types": "^2.1.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/redis": "^4.0.11",
