--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dist-ts": "yarn run build:ts && node ./dist/index.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
@@ -25,6 +26,7 @@
     "express": "~4.16.1",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "express-useragent": "^1.0.15",
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
@@ -34,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
     "node-schedule": "^2.1.1",
+    "request-ip": "^3.3.0",
     "rotating-file-stream": "^3.1.0",
     "sequelize": "^6.29.0",
     "supertest": "^6.3.3",
