--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dist-ts": "yarn run build:ts && node ./dist/index.js"
   },
   "dependencies": {
+    "@types/request-ip": "^0.0.37",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
