--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
+    "express-ws": "^5.0.2",
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
@@ -46,13 +47,13 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/request-ip": "^0.0.37",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/mime-types": "^2.1.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/redis": "^4.0.11",
+    "@types/request-ip": "^0.0.37",
     "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.4.3",
     "ts-loader": "^9.4.2",
