--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
+    "nanoid": "3",
     "node-schedule": "^2.1.1",
     "request-ip": "^3.3.0",
     "rotating-file-stream": "^3.1.0",
