--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
